--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -10,12 +10,19 @@
     "mongoose": "^5.10.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.5"
+    "cross-env": "^7.0.2",
+    "jest": "^26.5.3",
+    "nodemon": "^2.0.5",
+    "supertest": "^5.0.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "lint": "eslint .",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "author": "Joonas Koskela",
   "license": "MIT"
