--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "eslint": "^7.11.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^5.10.9"
   },
   "devDependencies": {
